--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "midtrans-client": "^1.3.1",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1"
   }
