--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@angular/router": "^16.2.0",
     "@emailjs/browser": "^3.11.0",
     "flowbite": "^2.0.0",
-    "midtrans-client": "^1.3.1",
+    "moment": "^2.29.4",
+    "ngx-paypal": "^11.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.0",
     "tslib": "^2.3.0",
