--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "midtrans-client": "^1.3.1",
     "mongoose": "^8.0.0",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.0.1"
   }
 }
