--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": ["sweetalert2"],
             "outputPath": "dist/promo-tourism",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -25,7 +26,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/flatpickr/dist/flatpickr.css",
+              "node_modules/flatpickr/dist/themes/airbnb.css"
             ],
             "scripts": []
           },
