--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@emailjs/browser": "^3.11.0",
+    "angularx-flatpickr": "^7.3.0",
+    "flatpickr": "^4.6.13",
     "flowbite": "^2.0.0",
-    "moment": "^2.29.4",
-    "ngx-paypal": "^11.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.0",
     "tslib": "^2.3.0",
