feat, fix: view analytics report, backend for view analytics

--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/router": "^16.2.0",
     "@emailjs/browser": "^3.11.0",
     "angularx-flatpickr": "^7.3.0",
+    "apexcharts": "^3.45.1",
     "flatpickr": "^4.6.13",
     "flowbite": "^2.0.0",
+    "ng-apexcharts": "^1.8.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.0",
     "tslib": "^2.3.0",
