--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,9 @@
               "node_modules/flatpickr/dist/flatpickr.css",
               "node_modules/flatpickr/dist/themes/airbnb.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/apexcharts/dist/apexcharts.min.js"
+            ]
           },
           "configurations": {
             "production": {
